# alertissimo

./: .env.example  LICENCE  README.md  build.py  config.toml  packages.txt  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml  secrets.toml.example
alertissimo/: app.py  app_dsl.py  cli.py  config.py  run_orchestrator.py
alertissimo/core/: orchestrator.py  schema.py  smbbh_ir.py  smbbh_pipeline.py
alertissimo/core/brokers/: __init__.py  alerce.py  antares.py  base.py  fink.py  lasair.py
alertissimo/core/brokers/registry/: alerce.yaml  antares.yaml  capabilities.yaml  fink.yaml  lasair.yaml  load.py
alertissimo/dsl/: dsl_parser_validator.py  parser.py  translator.py
alertissimo/export/: writer.py
alertissimo/nlp/: interpreter.py
alertissimo/plot/: lightcurve.py  lightcurve_altair.py
data/examples/: demo.dsl
docs/: architecture.md  broker_access.md  dsl_verbs.md
tests/: test_pipeline.py
