[project]
name = "alertissimo"
version = "0.1.0"
description = "An über broker for transient alert orchestration"
authors = [{ name = "Veljko Vujčić" }]
requires-python = ">=3.9"

dependencies = [
    "antares-client>=1.8.0",
    "marshmallow==3.21.1",
    "lark>=1.2.2",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "streamlit>=1.47.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "altair>=5.5.0",
    "astropy>=7.1.0",
]
